[project]
name = "x32-cue-utilities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "et-xmlfile==2.0.0",
    "numpy==2.4.2",
    "openpyxl==3.1.5",
    "pandas==3.0.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "tzdata==2025.3",
]
